# SyzSpec

./: README.md
include/klee/Expr/: Constraints.h  Expr.h
include/klee/MLTA/: Analyzer.h  CallGraph.h  Common.h  Config.h  MLTA.h
include/klee/Specification/: Specification.h  SpecificationConfig.h  SpecificationManager.h
include/klee/Utils/: basic.h  def.h  json.hpp  llvm_related.h  log.h
lib/: CMakeLists.txt
lib/Core/: AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  ImpliedValue.cpp  Memory.cpp  Memory.h  Searcher.cpp  Searcher.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  UserSearcher.cpp
lib/Expr/: ArrayExprOptimizer.cpp  Constraints.cpp
lib/MLTA/: Analyzer.cc  CMakeLists.txt  CallGraph.cc  Common.cc  Config.cc  MLTA.cc
lib/Solver/: CexCachingSolver.cpp  IndependentSolver.cpp  Solver.cpp  SolverCmdLine.cpp  Z3Solver.cpp
lib/Specification/: CMakeLists.txt  Specification.cpp  SpecificationConfig.cpp  SpecificationManager.cpp
runtime/Freestanding/: CMakeLists.txt  linux.c
runtime/klee-libc/: CMakeLists.txt
tools/klee/: main.cpp
